[tool.poetry]
name = "python-algo"
version = "0.1.0"
description = "This repository saves python algorithm files"
authors = ["정승현 <tmdgusya@naver.com>"]
readme = "README.md"
packages = [{include = "python_algo"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
